--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>BH Resources</h1>
-        <p>Resources for U</p>
+        <h1>Resources for U</h1>
+        <p>Your one-stop hub for community resources.</p>
     </header>
 
     <nav class="tabs">
@@ -19,8 +19,6 @@
 
     <main>
         <div id="home" class="tab-content active">
-            <h2>Welcome to BH Resources</h2>
-            <p>Find the resources you need to support your community.</p>
             <div class="info-section">
                 <h3>Our Mission</h3>
                 <p>We are dedicated to connecting people with essential resources in their community. Whether you're looking for food assistance, community support, or other vital services, we're here to help.</p>
@@ -29,64 +27,24 @@
                 <h3>How to Use This Site</h3>
                 <p>Navigate through the tabs above to find different types of resources. Each section provides detailed information about available services and how to access them.</p>
             </div>
+            <div class="info-section">
+                <h3>Contact Us</h3>
+                <p>If you have any questions or need further assistance, please reach out to us at <a href="mailto:info@resources4u.com">info@resources4u.com</a>.</p>
+            </div>
         </div>
-
         <div id="food-resources" class="tab-content">
             <h2>Food Resources</h2>
-            <p>Find food assistance programs and resources in your area.</p>
-            <table class="resources-table">
-                <thead>
-                    <tr>
-                        <th>Organization</th>
-                        <th>Location</th>
-                        <th>Services</th>
-                        <th>Hours</th>
-                        <th>Contact</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Community Food Bank</td>
-                        <td>123 Main Street</td>
-                        <td>Food pantry, hot meals</td>
-                        <td>Mon-Fri: 9am-5pm</td>
-                        <td>(555) 123-4567</td>
-                    </tr>
-                    <tr>
-                        <td>Local Soup Kitchen</td>
-                        <td>456 Oak Avenue</td>
-                        <td>Daily meals, groceries</td>
-                        <td>Daily: 11am-2pm</td>
-                        <td>(555) 234-5678</td>
-                    </tr>
-                    <tr>
-                        <td>Neighborhood Pantry</td>
-                        <td>789 Elm Street</td>
-                        <td>Food boxes, fresh produce</td>
-                        <td>Tue-Thu: 10am-4pm</td>
-                        <td>(555) 345-6789</td>
-                    </tr>
-                    <tr>
-                        <td>Emergency Food Services</td>
-                        <td>321 Pine Road</td>
-                        <td>Emergency assistance, SNAP enrollment</td>
-                        <td>Mon-Sat: 8am-6pm</td>
-                        <td>(555) 456-7890</td>
-                    </tr>
-                    <tr>
-                        <td>Senior Nutrition Program</td>
-                        <td>654 Maple Drive</td>
-                        <td>Senior meals, delivery available</td>
-                        <td>Mon-Fri: 10am-3pm</td>
-                        <td>(555) 567-8901</td>
-                    </tr>
-                </tbody>
-            </table>
+            <p>a local list for when you need food assistance</p>
+            <div>
+                <p style="margin:0; color:#AA7D56; font-weight:600;">
+                    with the goverment shutdown its important we know where our community is here to support you.
+                </p>
+            </div>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 BH Resources. All rights reserved.</p>
+        <p>&copy; 2024 Resources for U. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
