--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <h2>Food Resources</h2>
             <p>a local list for when you need food assistance</p>
             <div>
-                <p style="margin:0; color:#AA7D56; font-weight:600;">
-                    with the goverment shutdown its important we know where our community is here to support you.
+                <p style="margin:0; color:#AA7D56; font-weight:600; font-style:italic;">
+                    with the government shutdown its important we know where our community is here to support you.
                 </p>
             </div>
         </div>
