--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
         </div>
         <div id="food-resources" class="tab-content">
             <h2>Food Resources</h2>
-            <p>a local list for when you need food assistance</p>
-            <div>
-                <p style="margin:0; color:#AA7D56; font-weight:600; font-style:italic;">
-                    with the government shutdown its important we know where our community is here to support you.
-                </p>
-            </div>
+            <p>A local list for when you need food assistance.</p>
+            <p style="margin:0; color:#AA7D56; font-weight:600; font-style:italic;">With the government shutdown, it's important we know where our community is here to support you.</p>
+            <p>Below is a picture of the WIC regions. Use this guide to view programs by state regions, rather than just cities.</p>
+            <p>West = Blue</p>
+            <p>Central = Orange</p>
+            <p>South Central = Green</p>
+            <p>Northeast = Gray</p>
+            <p>Southeast = Brown</p>
+            <script src="SDresourceList.js"></script>
         </div>
     </main>
 
