--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
             <p>South Central = Green</p>
             <p>Northeast = Gray</p>
             <p>Southeast = Brown</p>
-            <script src="SDresourceList.js"></script>
-        </div>
+      </div>  
+      <div id="SDresourceList">
+        <!-- Resources will be loaded here by JavaScript -->
+      </div>
     </main>
 
     <footer>
         <p>&copy; 2024 Resources for U. All rights reserved.</p>
     </footer>
-
+    <script type="module" src="resources.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
