--- a/food-resources.html
+++ b/food-resources.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Food Resources</h1>
-        <p>A local list for when you need food assistance.</p>
-        <nav class="breadcrumb">
-            <a href="index.html">← Back to Home</a>
-        </nav>
+        <h1>Resources for U</h1>
+        <p>Your one-stop hub for community resources.</p>
     </header>
+
+    <nav class="tabs">
+        <a href="index.html" class="tab-button">Home</a>
+        <button class="tab-button active">Food Resources</button>
+    </nav>
 
     <main>
         <div class="intro-section">
+            <h2>Food Resources</h2>
+            <p>A local list for when you need food assistance.</p>
             <p style="margin:0; color:#AA7D56; font-weight:600; font-style:italic;">With the government shutdown, it's important we know where our community is here to support you.</p>
             <p>Below are food pantries and assistance programs organized by region. Click on each region to expand and view available resources.</p>
             
