--- a/food-resources.html
+++ b/food-resources.html
@@ -26,7 +26,7 @@
             
             <div class="region-guide">
                 <h3>Region Guide:</h3>
-                <ul>
+                            <p style="margin:0; color:#AA7D56; font-weight:600; font-style:italic;">it is same as the WIC regions</p>
                     <li><span class="region-color blue">■</span> West = Blue</li>
                     <li><span class="region-color orange">■</span> Central = Orange</li>
                     <li><span class="region-color green">■</span> South Central = Green</li>
