--- a/food-resources.html
+++ b/food-resources.html
@@ -23,10 +23,10 @@
             <p>A local list for when you need food assistance.</p>
             <p style="margin:0; color:#AA7D56; font-weight:600; font-style:italic;">With the government shutdown, it's important we know where our community is here to support you.</p>
             <p>Below are food pantries and assistance programs organized by region. Click on each region to expand and view available resources.</p>
-            
             <div class="region-guide">
                 <h3>Region Guide:</h3>
-                            <p style="margin:0; color:#AA7D56; font-weight:600; font-style:italic;">it is same as the WIC regions</p>
+                <p style="margin:0; color:#AA7D56; font: weight 300px; font-style:italic;">it is same as the WIC regions</p>
+                <ul>
                     <li><span class="region-color blue">■</span> West = Blue</li>
                     <li><span class="region-color orange">■</span> Central = Orange</li>
                     <li><span class="region-color green">■</span> South Central = Green</li>
@@ -35,7 +35,6 @@
                 </ul>
             </div>
         </div>
-        
         <div id="SDresourceList" class="resource-container">
             <!-- Resources will be loaded here by JavaScript -->
         </div>
