--- a/food-resources.html
+++ b/food-resources.html
@@ -25,7 +25,9 @@
             <p>Below are food pantries and assistance programs organized by region. Click on each region to expand and view available resources.</p>
             <div class="region-guide">
                 <h3>Region Guide:</h3>
-                <p style="margin:0; color:#AA7D56; font: weight 300px; font-style:italic;">it is same as the WIC regions</p>
+                <p style="margin:0; color:#AA7D56; font-weight: 300; font-style:italic;">it is same as the WIC regions</p>
+                    <img src="images/county.png" alt="South Dakota County Map showing WIC regions" style="max-width: 100%; height: auto; margin: 1rem 0; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                </div>
                 <ul>
                     <li><span class="region-color blue">■</span> West = Blue</li>
                     <li><span class="region-color orange">■</span> Central = Orange</li>
@@ -33,6 +35,7 @@
                     <li><span class="region-color gray">■</span> Northeast = Gray</li>
                     <li><span class="region-color brown">■</span> Southeast = Brown</li>
                 </ul>
+
             </div>
         </div>
         <div id="SDresourceList" class="resource-container">
