--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             </div>
             <div class="info-section">
                 <h3>Contact Us</h3>
-                <p>If you have any questions or need further assistance, please reach out to us at <a href="mailto:info@resources4u.com">info@resources4u.com</a>.</p>
+                <!-- <p>If you have any questions or need further assistance, please reach out to us at <a href="mailto:info@resources4u.com">info@resources4u.com</a>.</p> -->
             </div>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 Resources for U. All rights reserved.</p>
+        <p>&copy; 2025 Resources for U.</p>
     </footer>
     <script src="script.js"></script>
 </body>
