--- a/food-resources.html
+++ b/food-resources.html
@@ -12,9 +12,10 @@
         <p>Your one-stop hub for community resources.</p>
     </header>
 
-    <nav class="tabs">
-        <a href="index.html" class="tab-button">Home</a>
-        <button class="tab-button active">Food Resources</button>
+    <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="food-resources.html" class="active">Food Resources</a>
+        <a href="submit-resource.html">Submit Resource</a>
     </nav>
 
     <main>
