yes and figure out the submit form and you can add the tabs to the other pages too.

--- a/submit-resource.html
+++ b/submit-resource.html
@@ -12,10 +12,9 @@
         <p>Your one-stop hub for community resources.</p>
     </header>
 
-        <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="food-resources.html">Food Resources</a>
-        <a href="submit-resource.html" class="active">Submit Resource</a>
+        <nav class="tabs">
+        <button class="tab-button active" onclick="openTab(event, 'home')">Home</button>
+        <a href="food-resources.html" class="tab-button">Food Resources</a>
     </nav>
 
     <main>
