--- a/food-resources.html
+++ b/food-resources.html
@@ -12,10 +12,9 @@
         <p>Your one-stop hub for community resources.</p>
     </header>
 
-    <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="food-resources.html" class="active">Food Resources</a>
-        <a href="submit-resource.html">Submit Resource</a>
+    <nav class="tabs">
+        <button class="tab-button active" onclick="openTab(event, 'home')">Home</button>
+        <a href="food-resources.html" class="tab-button">Food Resources</a>
     </nav>
 
     <main>
